# inference

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c
main/Inc/: all_ops_resolver.h  bms.h  config.h  data_interface.h  dtu_4g.h  inference.h  led.h  lis3dh.h  littlefs_ops.h  mqtt_data_interface.h  ota.h  project_system.h  rs485.h  rskft.h  sleep.h  stft.h  tflm.h  wifi.h
main/Src/: all_ops_resolver.cpp  bms.c  config.c  data_interface.c  dtu_4g.c  inference.c  led.c  lis3dh.c  littlefs_ops.c  mqtt_data_interface.c  ota.c  rs485.c  rskft.c  sleep.c  stft.c  tflm.cpp  wifi.c
main/littlefs_image/: config.json
main/models/: SOCTestData.c  model_data1.c  test_data.c
